--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Chewy&family=Fira+Sans:wght@300;400;600&family=Montserrat:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,500;0,800;1,500&family=Poppins:wght@100;400&family=Rye&display=swap');
 
 
+.paint {
+    border-radius: 91% 57% 34% 93% / 75% 80% 40% 78%
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
